# Self-driving-vehicle-Practice

01_Localization/: README.MD
01_Localization/ICP_PCL_DEMO/: CMakeLists.txt  README.MD  iterative_closest_point.cpp  iterative_icp_space.cpp
01_Localization/NDT_PCL_demo/: CMakeLists.txt  normal_distributions_transform.cpp
01_Localization/slam_ch7/: CMakeLists.txt  feature_extraction.cpp
02_State_Estimation&Multi-Sensors_Fusion/: EKF.html  EKF_demo.py  Readme.md  kalman_filter_demo.py
04_Planning/cubic_spline/: cubic_spline.py  test.py
04_Planning/frenet_optimal/: cubic_spline.py  frenet_optimal_trajectory.py
05_CNN/: Mnist.py
06_Optimization/ceres_custombundle/: CMakeLists.txt  Readme.md  SnavelyReprojectionError.h  ceresBundle.cpp
06_Optimization/ceres_custombundle/common/: projection.h
06_Optimization/ceres_custombundle/common/flags/: command_args.h
06_Optimization/g2o_custombundle/: CMakeLists.txt  g2o_bal_class.h  g2o_bundle.cpp
06_Optimization/g2o_custombundle/common/: BALProblem.cpp  BALProblem.h  BundleParams.h  projection.h
06_Optimization/g2o_custombundle/common/tools/: random.h  rotation.h
project_1_lane_finding_basic/: Line.py  lane_detection.py  main.py
project_2_traffic_sign_classifier/: Traffic_Sign_Classifier.py  testModel_on_new_Images.py
project_3_car_detection/: car_detection.py
project_3_car_detection/utils/: utils.py
project_6_extended_kalman_filter/: CMakeLists.txt
project_6_extended_kalman_filter/Docs/: Input_Output File Format.txt
project_6_extended_kalman_filter/src/: FusionEKF.h  ground_truth_package.h  main.cpp  measurement_package.h  tools.cpp
